Fixed Close Button Color in Dark Mode

--- a/src/assets/app.scss
+++ b/src/assets/app.scss
@@ -133,6 +133,7 @@ h2 {
 
     .btn-close {
         opacity: 1;
+        filter: invert(1);
     }
 
     .modal-header {
